# myutils

./: .gitignore  .gitmodules  Makefile
I-Hate-Linux-Shells/: Cargo.toml  README.md
I-Hate-Linux-Shells/src/: ansi.rs  defines.rs  main.rs  parsing.rs
I-Hate-Linux-Shells/src/builtins/: cd.rs  exec.rs  exit.rs  mod.rs
echo/: Cargo.toml
echo/src/: main.rs
src/whoami/: Makefile
src/whoami/src/: main.c
whoami/src/: main.h
yes/: Cargo.toml
yes/src/: main.rs
