[package]
name = "ihlsh"
version = "0.0.1"
edition = "2021"
authors = ["Decator <deactor.c@proton.me>"]
description = "A shell for Unix-like systems"
readme = "README.md"
homepage = "https://github.com/El-Wumbus/I-Hate-Linux-Shells"
repository = "https://github.com/El-Wumbus/I-Hate-Linux-Shells"
# license = "LGPL-v3-only"
license-file = "LICENSE.md"

[[bin]]
name = "ihlsh"
path = "src/main.rs"

[dependencies]
users="0.11.0"
libc="0.2.132"
exec = "0.3.1"
structopt = "0.3"
rustyline = "10.0.0"
# shell = { git = "https://github.com/google/rust-shell" } Useless garbage made by google that i, for some reason, wanted to use